--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "devDependencies": {
     "gulp": "^3.7.0",
     "gulp-autoprefixer": "0.0.7",
+    "gulp-clean": "^0.3.0",
     "gulp-concat": "^2.2.0",
     "gulp-livereload": "^1.5.0",
     "gulp-minify-css": "^0.3.4",
     "gulp-notify": "^1.2.5",
-    "gulp-uglify": "^0.2.1",
-    "psi": "0.0.3",
-    "gulp-ruby-sass": "^0.5.0",
-    "gulp-uglifyjs": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-clean": "^0.3.0"
+    "gulp-ruby-sass": "^0.5.0",
+    "gulp-uglify": "^0.2.1",
+    "gulp-uglifyjs": "^0.3.0",
+    "psi": "0.0.3",
+    "replace": "^0.3.0"
   }
 }
