--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 profile
 
 # xcode noise
-build/*
 *.mode1
 *.mode1v3
 *.mode2v3
@@ -18,5 +17,5 @@ xcuserdata
 CVS
 
 node_modules
-build
 .sass-cache
+build/**/*.map
